Added GitHub Action for building docker image with ARM64 support