@@ -1,10 +1,10 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build
+# Use an OpenJDK image as the base
+FROM --platform=${TARGETPLATFORM} eclipse-temurin:17-jre
 
-FROM openjdk:8-jre-slim
+WORKDIR /app
+
+COPY build/libs/spring-petclinic-kotlin-*.*.*.jar /app/app.jar
+
 EXPOSE 8080
-COPY --from=build /home/gradle/src/build/libs/spring-petclinic-kotlin.jar /app/
-RUN bash -c 'touch /app/spring-petclinic-kotlin.jar'
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-petclinic-kotlin.jar"]
+
+CMD ["java", "-jar", "app.jar"]
